set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${UNIT_TEST_BIN_OUTPUT_DIR})                                                                                                                 

add_subdirectory(buffer)
add_subdirectory(memory)
add_subdirectory(vtree)
add_subdirectory(comparator)
add_subdirectory(defrag)
add_subdirectory(multiset)

