
include_directories(.)
include_directories(..)

add_executable(hitlist1 hitconsole.cpp hitlist1.cpp)
add_executable(hitlist2 hitconsole.cpp hitlist2.cpp)
add_executable(hitlist3 hitconsole.cpp hitlist3.cpp)
add_executable(hitlist4 hitconsole.cpp hitlist4.cpp)
add_executable(hitlist5 hitconsole.cpp hitlist5.cpp)
add_executable(hitlist6 hitconsole.cpp hitlist6.cpp)
add_executable(hitlist7 hitconsole.cpp hitlist7.cpp)
add_executable(hitlistX hitconsole.cpp hitlistX.cpp)
