set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${UNIT_TEST_BIN_OUTPUT_DIR})                                                                                                                 

include_directories(.)

add_executable(hitlist1 hitconsole.cpp hitlist1.cpp)
add_executable(hitlist2 hitconsole.cpp hitlist2.cpp)
add_executable(hitlist3 hitconsole.cpp hitlist3.cpp)
add_executable(hitlist4 hitconsole.cpp hitlist4.cpp)
add_executable(hitlist5 hitconsole.cpp hitlist5.cpp)
add_executable(hitlist6 hitconsole.cpp hitlist6.cpp)
add_executable(hitlist7 hitconsole.cpp hitlist7.cpp)
add_executable(hitlistX hitconsole.cpp hitlistX.cpp)

target_link_libraries(hitlist1 rt)
target_link_libraries(hitlist2 rt)
target_link_libraries(hitlist3 rt)
target_link_libraries(hitlist4 rt)
target_link_libraries(hitlist5 rt)
target_link_libraries(hitlist6 rt)
target_link_libraries(hitlist7 rt)
target_link_libraries(hitlist7 rt)
